gccida/g2/purge_single_hard_subreg_set
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_single_hard_subreg_set/src/function.c:3968:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_single_hard_subreg_set/src/function.c:3975:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v2.rtwint = ( __int64)pattern->fld[0]; 
                      ^~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_single_hard_subreg_set/src/function.c:3988:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v7 + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_single_hard_subreg_set/src/function.c:3990:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v2.rtwint + 2)); 
  ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/purge_single_hard_subreg_set/src/obj/function.o] Error 1
